# AgentHub

./: .gitignore  README.md  commands.sh  docker-compose.dev.yml  docker-compose.yml  package-lock.json  setup.py
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  init-mongo.js  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: middleware.py  models.py
backend/app/api/routes/: chat.py  health.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py  logging_config.py  metrics.py  middleware.py
backend/app/schemas/: chat.py  database.sql
backend/app/services/: cache.py  database.py  graph.py  rate_limit.py  state.py
backend/app/services/agents/: __init__.py  assistant.py  base.py  customer_service.py  human_proxy.py  product.py  router.py  technical.py
backend/app/services/agents/booking/: __init__.py  base_booking.py  (+4 more)
backend/app/services/database/: mongodb.py
backend/scripts/: check-mongodb-users.ps1  dev-setup.ps1  monitor-logs.ps1  reset-mongodb.bat  reset-mongodb.ps1  reset-mongodb.sh  setup-dev.bat  setup-dev.sh  verify-mongodb.ps1  verify-mongodb.sh  verify-setup.ps1
backend/tests/: conftest.py
backend/tests/integration/: test_agent_workflow.py  test_api_endpoints.py  test_chat_flow.py
backend/tests/performance/: test_load.py
backend/tests/security/: test_security.py
backend/tests/unit/test_agents/: test_base.py  test_customer_service.py  test_human_proxy.py  test_product.py  test_router.py  test_technical.py
backend/tests/unit/test_services/: test_cache.py  test_state.py
(+24 files in other folders)
