[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenthub"
version = "1.0.0"
description = "A sophisticated multi-agent system built with LangChain and LangGraph"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.10",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0",
    "pydantic>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pytest>=7.4.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.1",
    "graphviz>=0.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
] 